pubs with journal and book published and schoool

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -9,7 +9,9 @@
 <p>
 Sergi Caelles, Kevis-Kokitsi Maninis, Jordi Pont-Tuset, <strong> L. Leal-Taix&eacute;</strong>, Daniel Cremers and Luc Van Gool<br />
 <i>One-Shot Video Object Segmentation</i><br />
-arXiv:1611.05198.
+arXiv:1611.05198, 
+
+
 2016.
 <br />
 
@@ -43,7 +45,9 @@ arXiv:1611.05198.
 <p>
 R. Henschel, <strong> L. Leal-Taix&eacute; </strong>, B. Rosenhahn and K. Schindler<br />
 <i>Tracking with multi-level features</i><br />
-arXiv:1607.07304.
+arXiv:1607.07304, 
+
+
 2016.
 <br />
 
@@ -77,7 +81,9 @@ arXiv:1607.07304.
 <p>
 <strong>L. Leal-Taix&eacute;</strong>, C. Canton-Ferrer and K. Schindler<br />
 <i>Learning by tracking: siamese CNN for robust target association</i><br />
-IEEE Conference on Computer Vision and Pattern Recognition Workshops (CVPR). DeepVision: Deep Learning for Computer Vision..
+IEEE Conference on Computer Vision and Pattern Recognition Workshops (CVPR). DeepVision: Deep Learning for Computer Vision., 
+
+
 2016.
 <br />
 
@@ -111,7 +117,9 @@ IEEE Conference on Computer Vision and Pattern Recognition Workshops (CVPR). Dee
 <p>
 A. Milan, <strong>L. Leal-Taix&eacute;</strong>, I. Reid, S. Roth and K. Schindler<br />
 <i>MOT16: A benchmark for multi-object tracking</i><br />
-arXiv:1603.00831.
+arXiv:1603.00831, 
+
+
 2016.
 <br />
 
@@ -145,7 +153,9 @@ arXiv:1603.00831.
 <p>
 M. Fenzi, <b>L. Leal-Taixe, J. Ostermann and T. Tuytelaars</b><br />
 <i>Continuous Pose Estimation with a Spatial Ensemble of Fisher Regressors</i><br />
-IEEE International Conference on Computer Vision (ICCV).
+IEEE International Conference on Computer Vision (ICCV), 
+
+
 2015.
 <br />
 
@@ -179,7 +189,9 @@ IEEE International Conference on Computer Vision (ICCV).
 <p>
 M. Fenzi, <strong>L. Leal-Taix&eacute;</strong>, K. Schindler and B. Rosenhahn<br />
 <i>Pose Estimation of Object Categories in Videos Using Linear Programming</i><br />
-IEEE Winter Conference on Applications of Computer Vision (WACV).
+IEEE Winter Conference on Applications of Computer Vision (WACV), 
+
+
 2015.
 <br />
 
@@ -213,7 +225,9 @@ IEEE Winter Conference on Applications of Computer Vision (WACV).
 <p>
 <strong>L. Leal-Taix&eacute;</strong>, A. Milan, I. Reid, S. Roth and K. Schindler<br />
 <i>MOTChallenge 2015: Towards a Benchmark for Multi-Target Tracking</i><br />
-arXiv:1504.01942.
+arXiv:1504.01942, 
+
+
 2015.
 <br />
 
@@ -247,6 +261,8 @@ arXiv:1504.01942.
 <p>
 A. Milan, <strong>L. Leal-Taix&eacute;</strong>, K. Schindler and I. Reid<br />
 <i>Joint Tracking and Segmentation of Multiple Targets</i><br />
+IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 
+
 
 2015.
 <br />
@@ -262,6 +278,7 @@ A. Milan, <strong>L. Leal-Taix&eacute;</strong>, K. Schindler and I. Reid<br />
   author = {A. Milan and <strong>L. Leal-Taix&eacute;</strong> and K. Schindler and I. Reid},
   title = {Joint Tracking and Segmentation of Multiple Targets},
   booktitle = {CVPR},
+  journal = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   year = {2015}
 }
 </pre>
@@ -281,7 +298,9 @@ A. Milan, <strong>L. Leal-Taix&eacute;</strong>, K. Schindler and I. Reid<br />
 <p>
 D. A. B. Oliveria, <strong>L. Leal-Taix&eacute;</strong>, R. Q. Feitosa and B. Rosenhahn<br />
 <i>Automatic tracking of vessel-like structures from a single starting point</i><br />
-Computerized Medical Imaging and Graphics.
+Computerized Medical Imaging and Graphics, 
+
+
 2015.
 <br />
 
@@ -315,7 +334,9 @@ Computerized Medical Imaging and Graphics.
 <p>
 R. Henschel, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 <i>Efficient multiple people tracking using minimum cost arborescences</i><br />
-German Conference on Pattern Recognition (GCPR).
+German Conference on Pattern Recognition (GCPR), 
+
+
 2014.
 <br />
 
@@ -349,7 +370,9 @@ German Conference on Pattern Recognition (GCPR).
 <p>
 <strong>L. Leal-Taix&eacute;</strong>, M. Fenzi, A. Kuznetsova, B. Rosenhahn and S. Savarese<br />
 <i>Learning an image-based motion context for multiple people tracking</i><br />
-IEEE Conference on Computer Vision and Pattern Recognition (CVPR).
+IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 
+
+
 2014.
 <br />
 
@@ -384,6 +407,8 @@ IEEE Conference on Computer Vision and Pattern Recognition (CVPR).
 <strong>L. Leal-Taix&eacute;</strong><br />
 <i>Multiple object tracking with context awareness</i><br />
 
+
+Leibniz University Hannover, 
 2014.
 <br />
 
@@ -417,7 +442,9 @@ IEEE Conference on Computer Vision and Pattern Recognition (CVPR).
 <p>
 M. Fenzi, <strong>L. Leal-Taix&eacute;</strong>, B. Rosenhahn and J. Ostermann<br />
 <i>Class generative models based on feature regression for pose estimation of object categories</i><br />
-IEEE Conference on Computer Vision and Pattern Recognition (CVPR).
+IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 
+
+
 2013.
 <br />
 
@@ -451,7 +478,9 @@ IEEE Conference on Computer Vision and Pattern Recognition (CVPR).
 <p>
 A. Kuznetsova, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 <i>Real-time sign language recognition using a consumer depth camera</i><br />
-IEEE International Conference on Computer Vision (ICCV) Workshops. 3rd Workshop on Consumer Depth Cameras for Computer Vision (CDC4CV).
+IEEE International Conference on Computer Vision (ICCV) Workshops. 3rd Workshop on Consumer Depth Cameras for Computer Vision (CDC4CV), 
+
+
 2013.
 <br />
 
@@ -485,7 +514,9 @@ IEEE International Conference on Computer Vision (ICCV) Workshops. 3rd Workshop 
 <p>
 <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 <i>Pedestrian interaction in tracking: the social force model and global optimization methods</i><br />
-Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective.
+Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective, 
+Springer Berlin Heidelberg, 
+
 2013.
 <br />
 
@@ -520,7 +551,9 @@ Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspect
 <p>
 M. Fenzi, R. Dragon, <strong>L. Leal-Taix&eacute;</strong>, B. Rosenhahn and J. Ostermann<br />
 <i>3D Object Recognition and Pose Estimation for Multiple Objects using Multi-Prioritized RANSAC and Model Updating</i><br />
-German Conference on Pattern Recognition (GCPR).
+German Conference on Pattern Recognition (GCPR), 
+
+
 2012.
 <br />
 
@@ -555,6 +588,8 @@ German Conference on Pattern Recognition (GCPR).
 F. Dellaert, J.-M. Frahm, M. Pollefeys, <strong>L. Leal-Taix&eacute;</strong> and B. Rosenhahn<br />
 <i>Outdoor and Large-Scale Real-World Scene Analysis</i><br />
 
+Springer Berlin Heidelberg, 
+
 2012.
 <br />
 
@@ -588,7 +623,9 @@ F. Dellaert, J.-M. Frahm, M. Pollefeys, <strong>L. Leal-Taix&eacute;</strong> an
 <p>
 <strong>L. Leal-Taix&eacute;</strong>, G. Pons-Moll and B. Rosenhahn<br />
 <i>Branch-and-price global optimization for multi-view multi-target tracking</i><br />
-IEEE Conference on Computer Vision and Pattern Recognition (CVPR).
+IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 
+
+
 2012.
 <br />
 
@@ -622,7 +659,9 @@ IEEE Conference on Computer Vision and Pattern Recognition (CVPR).
 <p>
 <strong>L. Leal-Taix&eacute;</strong>, G. Pons-Moll and B. Rosenhahn<br />
 <i>Exploiting pedestrian interaction via global optimization and social behaviors</i><br />
-Outdoor and Large-Scale Real-World Scene Analysis.
+Outdoor and Large-Scale Real-World Scene Analysis, 
+Springer Berlin Heidelberg, 
+
 2012.
 <br />
 
@@ -658,7 +697,9 @@ Outdoor and Large-Scale Real-World Scene Analysis.
 <p>
 S. Maleschlijski, G. H. Sendra, A. Di Fino, <strong>L. Leal-Taix&eacute;</strong>, I. Thome, A. Terfort, N. Aldred, M. Grunze, A. S. Clare, B. Rosenhahn and A. Rosenhahn<br />
 <i>Three dimensional tracking of exploratory behavior of barnacle cyprids using stereoscopy</i><br />
-Biointerphases.
+Biointerphases, 
+
+
 2012.
 <br />
 
@@ -692,7 +733,9 @@ Biointerphases.
 <p>
 G. Pons-Moll, <strong>L. Leal-Taix&eacute;</strong>, J. Gall and B. Rosenhahn<br />
 <i>Data-driven Manifolds for Outdoor Motion Capture</i><br />
-Outdoor and Large-Scale Real-World Scene Analysis.
+Outdoor and Large-Scale Real-World Scene Analysis, 
+Springer Berlin Heidelberg, 
+
 2012.
 <br />
 
@@ -727,7 +770,9 @@ Outdoor and Large-Scale Real-World Scene Analysis.
 <p>
 <strong>L. Leal-Taix&eacute;</strong>, M. Heydt, A. Rosenhahn and B. Rosenhahn<br />
 <i>Understanding what we cannot see: automatic analysis of 4D digital in-line holographic microscopy data</i><br />
-Video Processing and Computational Video.
+Video Processing and Computational Video, 
+Springer Berlin Heidelberg, 
+
 2011.
 <br />
 
@@ -762,7 +807,9 @@ Video Processing and Computational Video.
 <p>
 <strong>L. Leal-Taix&eacute;</strong>, G. Pons-Moll and B. Rosenhahn<br />
 <i>Everybody needs somebody: Modeling social and grouping behavior on a linear programming multiple people tracker</i><br />
-IEEE International Conference on Computer Vision (ICCV) Workshops. 1st Workshop on Modeling, Simulation and Visual Analysis of Large Crowds.
+IEEE International Conference on Computer Vision (ICCV) Workshops. 1st Workshop on Modeling, Simulation and Visual Analysis of Large Crowds, 
+
+
 2011.
 <br />
 
@@ -796,7 +843,9 @@ IEEE International Conference on Computer Vision (ICCV) Workshops. 1st Workshop 
 <p>
 S. Maleschlijski, <strong>L. Leal-Taix&eacute;</strong>, S. Weisse, A. Di Fino, N. Aldred, A. S. Clare, G. H. Sendra, B. Rosenhahn and A. Rosenhahn<br />
 <i>A stereoscopic approach for three dimensional tracking of marine biofouling microorganisms</i><br />
-Microscopic Image Analysis with Applications in Biology (MIAAB).
+Microscopic Image Analysis with Applications in Biology (MIAAB), 
+
+
 2011.
 <br />
 
@@ -830,7 +879,9 @@ Microscopic Image Analysis with Applications in Biology (MIAAB).
 <p>
 G. Pons-Moll, <strong>L. Leal-Taix&eacute;</strong>, T. Truong and B. Rosenhahn<br />
 <i>Efficient and robust shape matching for model based human motion capture</i><br />
-German Conference on Pattern Recognition (GCPR).
+German Conference on Pattern Recognition (GCPR), 
+
+
 2011.
 <br />
 
@@ -864,7 +915,9 @@ German Conference on Pattern Recognition (GCPR).
 <p>
 G. Pons-Moll, A. Baak, J. Gall, <strong>L. Leal-Taix&eacute;</strong>, M. Mueller, H.-P.Seidel and B. Rosenhahn<br />
 <i>Outdoor human motion capture using inverse kinematics and von Mises-Fisher sampling</i><br />
-IEEE International Conference on Computer Vision (ICCV).
+IEEE International Conference on Computer Vision (ICCV), 
+
+
 2011.
 <br />
 
@@ -898,7 +951,9 @@ IEEE International Conference on Computer Vision (ICCV).
 <p>
 <strong>L. Leal-Taix&eacute;</strong>, M. Heydt, S. Weisse, A. Rosenhahn and B. Rosenhahn<br />
 <i>Classification of swimming microorganisms motion patterns in 4D digital in-line holography data</i><br />
-German Conference on Pattern Recognition (GCPR).
+German Conference on Pattern Recognition (GCPR), 
+
+
 2010.
 <br />
 
@@ -932,7 +987,9 @@ German Conference on Pattern Recognition (GCPR).
 <p>
 <strong>L. Leal-Taix&eacute;</strong>, A. U. Coskun, B. Rosenhahn and D. Brooks<br />
 <i>Automatic segmentation of arteries in multi-stain histology images</i><br />
-World Congress on Medical Physics and Biomedical Engineering.
+World Congress on Medical Physics and Biomedical Engineering, 
+
+
 2009.
 <br />
 
@@ -966,7 +1023,9 @@ World Congress on Medical Physics and Biomedical Engineering.
 <p>
 <strong>L. Leal-Taix&eacute;</strong>, M. Heydt, A. Rosenhahn and B. Rosenhahn<br />
 <i>Automatic tracking of swimming microorganisms in 4D digital in-line holography data</i><br />
-IEEE Workshops on Motion and Video Computing (WMVC).
+IEEE Workshops on Motion and Video Computing (WMVC), 
+
+
 2009.
 <br />
 
