new thesis link

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -261,7 +261,7 @@ arXiv:1504.01942,
 <p>
 A. Milan, <strong>L. Leal-Taix&eacute;</strong>, K. Schindler and I. Reid<br />
 <i>Joint Tracking and Segmentation of Multiple Targets</i><br />
-IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 
+
 
 
 2015.
@@ -278,7 +278,6 @@ IEEE Conference on Computer Vision and Pattern Recognition (CVPR),
   author = {A. Milan and <strong>L. Leal-Taix&eacute;</strong> and K. Schindler and I. Reid},
   title = {Joint Tracking and Segmentation of Multiple Targets},
   booktitle = {CVPR},
-  journal = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   year = {2015}
 }
 </pre>
@@ -414,7 +413,7 @@ Leibniz University Hannover,
 
 <a href="javascript:toggleBibtex('lealthesis2014')">[BibTeX]</a>
 
-<a href="http://arxiv.org/abs/1411.7935">[PDF]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86dVhlclpXcjVzYU0">[PDF]</a><a href="http://arxiv.org/abs/1411.7935">[ArXiV]</a> 
 </p>
 
 <div id="bib_lealthesis2014" class="bibtex noshow">
