--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -46,7 +46,7 @@ S. Caelles, K.-K. Maninis, J. Pont-Tuset, L. Leal-Taix&eacute;, D. Cremers and L
 <p>
 R. Henschel, L. Leal-Taix&eacute;, B. Rosenhahn and K. Schindler<br />
 <strong>Tracking with multi-level features</strong><br />
-<i></i>, 
+<i>arXiv:1607.07304 [Submitted to IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)]</i>, 
 
 
 2016.
@@ -83,7 +83,7 @@ R. Henschel, L. Leal-Taix&eacute;, B. Rosenhahn and K. Schindler<br />
 <p>
 L. Leal-Taix&eacute;, C. Canton-Ferrer and K. Schindler<br />
 <strong>Learning by tracking: siamese CNN for robust target association</strong><br />
-<i></i>, 
+<i>IEEE Conference on Computer Vision and Pattern Recognition Workshops (CVPR). DeepVision: Deep Learning for Computer Vision.</i>, 
 
 
 2016.
@@ -120,7 +120,7 @@ L. Leal-Taix&eacute;, C. Canton-Ferrer and K. Schindler<br />
 <p>
 A. Milan, L. Leal-Taix&eacute;, I. Reid, S. Roth and K. Schindler<br />
 <strong>MOT16: A benchmark for multi-object tracking</strong><br />
-<i></i>, 
+<i>arXiv:1603.00831</i>, 
 
 
 2016.
@@ -194,7 +194,7 @@ F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cr
 <p>
 M. Fenzi, L. Leal-Taix&eacute;, J. Ostermann and T. Tuytelaars<br />
 <strong>Continuous Pose Estimation with a Spatial Ensemble of Fisher Regressors</strong><br />
-<i></i>, 
+<i>IEEE International Conference on Computer Vision (ICCV)</i>, 
 
 
 2015.
@@ -231,7 +231,7 @@ M. Fenzi, L. Leal-Taix&eacute;, J. Ostermann and T. Tuytelaars<br />
 <p>
 M. Fenzi, L. Leal-Taix&eacute;, K. Schindler and B. Rosenhahn<br />
 <strong>Pose Estimation of Object Categories in Videos Using Linear Programming</strong><br />
-<i></i>, 
+<i>IEEE Winter Conference on Applications of Computer Vision (WACV)</i>, 
 
 
 2015.
@@ -268,7 +268,7 @@ M. Fenzi, L. Leal-Taix&eacute;, K. Schindler and B. Rosenhahn<br />
 <p>
 L. Leal-Taix&eacute;, A. Milan, I. Reid, S. Roth and K. Schindler<br />
 <strong>MOTChallenge 2015: Towards a Benchmark for Multi-Target Tracking</strong><br />
-<i></i>, 
+<i>arXiv:1504.01942</i>, 
 
 
 2015.
@@ -305,7 +305,7 @@ L. Leal-Taix&eacute;, A. Milan, I. Reid, S. Roth and K. Schindler<br />
 <p>
 A. Milan, L. Leal-Taix&eacute;, K. Schindler and I. Reid<br />
 <strong>Joint Tracking and Segmentation of Multiple Targets</strong><br />
-<i></i>, 
+<i>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</i>, 
 
 
 2015.
@@ -343,7 +343,7 @@ A. Milan, L. Leal-Taix&eacute;, K. Schindler and I. Reid<br />
 <p>
 D. A. B. Oliveria, L. Leal-Taix&eacute;, R. Q. Feitosa and B. Rosenhahn<br />
 <strong>Automatic tracking of vessel-like structures from a single starting point</strong><br />
-<i></i>, 
+<i>Computerized Medical Imaging and Graphics</i>, 
 
 
 2015.
@@ -380,7 +380,7 @@ D. A. B. Oliveria, L. Leal-Taix&eacute;, R. Q. Feitosa and B. Rosenhahn<br />
 <p>
 R. Henschel, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 <strong>Efficient multiple people tracking using minimum cost arborescences</strong><br />
-<i></i>, 
+<i>German Conference on Pattern Recognition (GCPR)</i>, 
 
 
 2014.
@@ -417,7 +417,7 @@ R. Henschel, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 <p>
 L. Leal-Taix&eacute;, M. Fenzi, A. Kuznetsova, B. Rosenhahn and S. Savarese<br />
 <strong>Learning an image-based motion context for multiple people tracking</strong><br />
-<i></i>, 
+<i>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</i>, 
 
 
 2014.
@@ -491,7 +491,7 @@ Leibniz University Hannover,
 <p>
 M. Fenzi, L. Leal-Taix&eacute;, B. Rosenhahn and J. Ostermann<br />
 <strong>Class generative models based on feature regression for pose estimation of object categories</strong><br />
-<i></i>, 
+<i>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</i>, 
 
 
 2013.
@@ -528,7 +528,7 @@ M. Fenzi, L. Leal-Taix&eacute;, B. Rosenhahn and J. Ostermann<br />
 <p>
 A. Kuznetsova, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 <strong>Real-time sign language recognition using a consumer depth camera</strong><br />
-<i></i>, 
+<i>IEEE International Conference on Computer Vision (ICCV) Workshops. 3rd Workshop on Consumer Depth Cameras for Computer Vision (CDC4CV)</i>, 
 
 
 2013.
@@ -565,7 +565,7 @@ A. Kuznetsova, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 <p>
 L. Leal-Taix&eacute; and B. Rosenhahn<br />
 <strong>Pedestrian interaction in tracking: the social force model and global optimization methods</strong><br />
-<i></i>, 
+<i>Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective</i>, 
 Springer Berlin Heidelberg, 
 
 2013.
@@ -603,7 +603,7 @@ Springer Berlin Heidelberg,
 <p>
 M. Fenzi, R. Dragon, L. Leal-Taix&eacute;, B. Rosenhahn and J. Ostermann<br />
 <strong>3D Object Recognition and Pose Estimation for Multiple Objects using Multi-Prioritized RANSAC and Model Updating</strong><br />
-<i></i>, 
+<i>German Conference on Pattern Recognition (GCPR)</i>, 
 
 
 2012.
@@ -677,7 +677,7 @@ Springer Berlin Heidelberg,
 <p>
 L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 <strong>Branch-and-price global optimization for multi-view multi-target tracking</strong><br />
-<i></i>, 
+<i>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</i>, 
 
 
 2012.
@@ -714,7 +714,7 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 <p>
 L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 <strong>Exploiting pedestrian interaction via global optimization and social behaviors</strong><br />
-<i></i>, 
+<i>Outdoor and Large-Scale Real-World Scene Analysis</i>, 
 Springer Berlin Heidelberg, 
 
 2012.
@@ -753,7 +753,7 @@ Springer Berlin Heidelberg,
 <p>
 S. Maleschlijski, G. H. Sendra, A. Di Fino, L. Leal-Taix&eacute;, I. Thome, A. Terfort, N. Aldred, M. Grunze, A. S. Clare, B. Rosenhahn and A. Rosenhahn<br />
 <strong>Three dimensional tracking of exploratory behavior of barnacle cyprids using stereoscopy</strong><br />
-<i></i>, 
+<i>Biointerphases</i>, 
 
 
 2012.
@@ -790,7 +790,7 @@ S. Maleschlijski, G. H. Sendra, A. Di Fino, L. Leal-Taix&eacute;, I. Thome, A. T
 <p>
 G. Pons-Moll, L. Leal-Taix&eacute;, J. Gall and B. Rosenhahn<br />
 <strong>Data-driven Manifolds for Outdoor Motion Capture</strong><br />
-<i></i>, 
+<i>Outdoor and Large-Scale Real-World Scene Analysis</i>, 
 Springer Berlin Heidelberg, 
 
 2012.
@@ -828,7 +828,7 @@ Springer Berlin Heidelberg,
 <p>
 L. Leal-Taix&eacute;, M. Heydt, A. Rosenhahn and B. Rosenhahn<br />
 <strong>Understanding what we cannot see: automatic analysis of 4D digital in-line holographic microscopy data</strong><br />
-<i></i>, 
+<i>Video Processing and Computational Video</i>, 
 Springer Berlin Heidelberg, 
 
 2011.
@@ -866,7 +866,7 @@ Springer Berlin Heidelberg,
 <p>
 L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 <strong>Everybody needs somebody: Modeling social and grouping behavior on a linear programming multiple people tracker</strong><br />
-<i></i>, 
+<i>IEEE International Conference on Computer Vision (ICCV) Workshops. 1st Workshop on Modeling, Simulation and Visual Analysis of Large Crowds</i>, 
 
 
 2011.
@@ -903,7 +903,7 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 <p>
 S. Maleschlijski, L. Leal-Taix&eacute;, S. Weisse, A. Di Fino, N. Aldred, A. S. Clare, G. H. Sendra, B. Rosenhahn and A. Rosenhahn<br />
 <strong>A stereoscopic approach for three dimensional tracking of marine biofouling microorganisms</strong><br />
-<i></i>, 
+<i>Microscopic Image Analysis with Applications in Biology (MIAAB)</i>, 
 
 
 2011.
@@ -940,7 +940,7 @@ S. Maleschlijski, L. Leal-Taix&eacute;, S. Weisse, A. Di Fino, N. Aldred, A. S. 
 <p>
 G. Pons-Moll, L. Leal-Taix&eacute;, T. Truong and B. Rosenhahn<br />
 <strong>Efficient and robust shape matching for model based human motion capture</strong><br />
-<i></i>, 
+<i>German Conference on Pattern Recognition (GCPR)</i>, 
 
 
 2011.
@@ -977,7 +977,7 @@ G. Pons-Moll, L. Leal-Taix&eacute;, T. Truong and B. Rosenhahn<br />
 <p>
 G. Pons-Moll, A. Baak, J. Gall, L. Leal-Taix&eacute;, M. Mueller, H.-P.Seidel and B. Rosenhahn<br />
 <strong>Outdoor human motion capture using inverse kinematics and von Mises-Fisher sampling</strong><br />
-<i></i>, 
+<i>IEEE International Conference on Computer Vision (ICCV)</i>, 
 
 
 2011.
@@ -1014,7 +1014,7 @@ G. Pons-Moll, A. Baak, J. Gall, L. Leal-Taix&eacute;, M. Mueller, H.-P.Seidel an
 <p>
 L. Leal-Taix&eacute;, M. Heydt, S. Weisse, A. Rosenhahn and B. Rosenhahn<br />
 <strong>Classification of swimming microorganisms motion patterns in 4D digital in-line holography data</strong><br />
-<i></i>, 
+<i>German Conference on Pattern Recognition (GCPR)</i>, 
 
 
 2010.
@@ -1088,7 +1088,7 @@ Technical University of Catalonia (UPC),
 <p>
 L. Leal-Taix&eacute;, A. U. Coskun, B. Rosenhahn and D. Brooks<br />
 <strong>Automatic segmentation of arteries in multi-stain histology images</strong><br />
-<i></i>, 
+<i>World Congress on Medical Physics and Biomedical Engineering</i>, 
 
 
 2009.
@@ -1125,7 +1125,7 @@ L. Leal-Taix&eacute;, A. U. Coskun, B. Rosenhahn and D. Brooks<br />
 <p>
 L. Leal-Taix&eacute;, M. Heydt, A. Rosenhahn and B. Rosenhahn<br />
 <strong>Automatic tracking of swimming microorganisms in 4D digital in-line holography data</strong><br />
-<i></i>, 
+<i>IEEE Workshops on Motion and Video Computing (WMVC)</i>, 
 
 
 2009.
