--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -454,9 +454,9 @@ L. Leal-Taix&eacute;, M. Fenzi, A. Kuznetsova, B. Rosenhahn and S. Savarese<br /
 <p>
 L. Leal-Taix&eacute;<br />
 <strong>Multiple object tracking with context awareness</strong><br />
-<i>
 
-Leibniz University Hannover, 
+
+<i>Leibniz University Hannover,</i> 
 2014.
 <br />
 
@@ -640,7 +640,7 @@ M. Fenzi, R. Dragon, L. Leal-Taix&eacute;, B. Rosenhahn and J. Ostermann<br />
 <p>
 F. Dellaert, J.-M. Frahm, M. Pollefeys, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 <strong>Outdoor and Large-Scale Real-World Scene Analysis</strong><br />
-<i>
+
 Springer Berlin Heidelberg, 
 
 2012.
@@ -1051,9 +1051,9 @@ L. Leal-Taix&eacute;, M. Heydt, S. Weisse, A. Rosenhahn and B. Rosenhahn<br />
 <p>
 L. Leal-Taix&eacute;<br />
 <strong>Automatic segmentation of multi-stain histology images of arteries</strong><br />
-<i>
 
-Technical University of Catalonia (UPC), 
+
+<i>Technical University of Catalonia (UPC),</i> 
 2009.
 <br />
 
