--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -81,12 +81,12 @@
 <script src="{{ site.url }}/assets/js/vendor/modernizr-2.7.1.custom.min.js"></script>
 
 <!-- Icons -->
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.jpg">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.jpg">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.jpg">
 
 <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
-<link rel="shortcut icon" href="{{ site.url }}/favicon.png">
+<link rel="shortcut icon" href="{{ site.url }}/favicon.jpg">
 
 <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
 <link rel="apple-touch-icon-precomposed" sizes="192x192" href="{{ site.url }}/images/apple-icon-precomposed.png">
