new title for paper

--- a/_includes/_mypubs.html
+++ b/_includes/_mypubs.html
@@ -8,8 +8,8 @@
 <td>
 <p>
 F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cremers<br />
-<strong>Image-based Localization with Spatial LSTMs</strong><br />
-<i>arXiv:1611.07890</i>, 
+<strong>Image-based localization using LSTMs for structured feature correlation</strong><br />
+<i>arXiv:1611.07890v2</i>, 
 
 
 2016.
@@ -24,8 +24,8 @@ F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cr
 <pre>
 @article{walcharxiv2016,
   author = {F. Walch and C. Hazirbas and L. Leal-Taix&eacute; and T. Sattler and S. Hilsenbeck and D. Cremers},
-  title = {Image-based Localization with Spatial LSTMs},
-  journal = {arXiv:1611.07890},
+  title = {Image-based localization using LSTMs for structured feature correlation},
+  journal = {arXiv:1611.07890v2},
   year = {2016}
 }
 </pre>
@@ -34,7 +34,6 @@ F. Walch, C. Hazirbas, L. Leal-Taix&eacute;, T. Sattler, S. Hilsenbeck and D. Cr
 </tr>
 
 </table>
-
 <!-- Item: caellesarxiv2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -71,7 +70,6 @@ S. Caelles, K.-K. Maninis, J. Pont-Tuset, L. Leal-Taix&eacute;, D. Cremers and L
 </tr>
 
 </table>
-
 <!-- Item: henschelarxiv2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -108,7 +106,6 @@ R. Henschel, L. Leal-Taix&eacute;, B. Rosenhahn and K. Schindler<br />
 </tr>
 
 </table>
-
 <!-- Item: lealcvprw2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -145,7 +142,6 @@ L. Leal-Taix&eacute;, C. Canton-Ferrer and K. Schindler<br />
 </tr>
 
 </table>
-
 <!-- Item: milanarxiv2016 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -165,7 +161,7 @@ A. Milan, L. Leal-Taix&eacute;, I. Reid, S. Roth and K. Schindler<br />
 
 <a href="javascript:toggleBibtex('milanarxiv2016')">[BibTeX]</a>
 
-<a href="https://arxiv.org/abs/1603.00831">[PDF]</a><a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
+<a href="https://arxiv.org/abs/1603.00831">[PDF]</a> <a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
 </p>
 
 <div id="bib_milanarxiv2016" class="bibtex noshow">
@@ -182,7 +178,6 @@ A. Milan, L. Leal-Taix&eacute;, I. Reid, S. Roth and K. Schindler<br />
 </tr>
 
 </table>
-
 <!-- Item: lealbookchapter2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -202,7 +197,7 @@ Springer Berlin Heidelberg,
 
 <a href="javascript:toggleBibtex('lealbookchapter2012')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> 
 </p>
 
 <div id="bib_lealbookchapter2012" class="bibtex noshow">
@@ -220,7 +215,6 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
-
 <!-- Item: fenziiccv2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -257,7 +251,6 @@ M. Fenzi, L. Leal-Taix&eacute;, J. Ostermann and T. Tuytelaars<br />
 </tr>
 
 </table>
-
 <!-- Item: milancvpr2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -295,7 +288,6 @@ A. Milan, L. Leal-Taix&eacute;, K. Schindler and I. Reid<br />
 </tr>
 
 </table>
-
 <!-- Item: lealarxiv2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -315,7 +307,7 @@ L. Leal-Taix&eacute;, A. Milan, I. Reid, S. Roth and K. Schindler<br />
 
 <a href="javascript:toggleBibtex('lealarxiv2015')">[BibTeX]</a>
 
-<a href="https://arxiv.org/abs/1504.01942">[PDF]</a><a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
+<a href="https://arxiv.org/abs/1504.01942">[PDF]</a> <a href="http://www.motchallenge.net/"> [MOTChallenge]</a> 
 </p>
 
 <div id="bib_lealarxiv2015" class="bibtex noshow">
@@ -332,7 +324,42 @@ L. Leal-Taix&eacute;, A. Milan, I. Reid, S. Roth and K. Schindler<br />
 </tr>
 
 </table>
+<!-- Item: oliveiracmig2015 -->
+<!-- <li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/OliLeaFeiRosCMIG2015.png" width="100px" height="100px">
+</td>
+<td>
+<p>
+D.A.B. Oliveria, L. Leal-Taix&eacute;, R.Q. Feitosa and B. Rosenhahn<br />
+<strong>Automatic tracking of vessel-like structures from a single starting point</strong><br />
+<i>Computerized Medical Imaging and Graphics</i>, 
 
+
+2015.
+<br />
+
+<a href="javascript:toggleBibtex('oliveiracmig2015')">[BibTeX]</a>
+
+<a href="http://www.sciencedirect.com/science/article/pii/S0895611115001469">[PDF]</a> 
+</p>
+
+<div id="bib_oliveiracmig2015" class="bibtex noshow">
+<pre>
+@article{oliveiracmig2015,
+  author = {D.A.B. Oliveria and L. Leal-Taix&eacute; and R.Q. Feitosa and B. Rosenhahn},
+  title = {Automatic tracking of vessel-like structures from a single starting point},
+  journal = {Computerized Medical Imaging and Graphics},
+  year = {2015}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
 <!-- Item: fenziwacv2015 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -369,44 +396,6 @@ M. Fenzi, L. Leal-Taix&eacute;, K. Schindler and B. Rosenhahn<br />
 </tr>
 
 </table>
-
-<!-- Item: oliveiracmig2015 -->
-<!-- <li >-->
-<table style="width:100%">
-<tr>
-<td style="width:110px;vertical-align: top;">
-<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/OliLeaFeiRosCMIG2015.png" width="100px" height="100px">
-</td>
-<td>
-<p>
-D. A. B. Oliveria, L. Leal-Taix&eacute;, R. Q. Feitosa and B. Rosenhahn<br />
-<strong>Automatic tracking of vessel-like structures from a single starting point</strong><br />
-<i>Computerized Medical Imaging and Graphics</i>, 
-
-
-2015.
-<br />
-
-<a href="javascript:toggleBibtex('oliveiracmig2015')">[BibTeX]</a>
-
-<a href="http://www.sciencedirect.com/science/article/pii/S0895611115001469">[PDF]</a> 
-</p>
-
-<div id="bib_oliveiracmig2015" class="bibtex noshow">
-<pre>
-@article{oliveiracmig2015,
-  author = {D.A.B. Oliveria and L. Leal-Taix&eacute; and R.Q. Feitosa and B. Rosenhahn},
-  title = {Automatic tracking of vessel-like structures from a single starting point},
-  journal = {Computerized Medical Imaging and Graphics},
-  year = {2015}
-}
-</pre>
-</div>
-</td>
-</tr>
-
-</table>
-
 <!-- Item: henschelgcpr2014 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -443,7 +432,6 @@ R. Henschel, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: lealcvpr2014 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -463,7 +451,7 @@ L. Leal-Taix&eacute;, M. Fenzi, A. Kuznetsova, B. Rosenhahn and S. Savarese<br /
 
 <a href="javascript:toggleBibtex('lealcvpr2014')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86SGRtUy1iX2hmM1U">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86UjNoRWU2MXgwLWs"> [SUNw abstract]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86SGRtUy1iX2hmM1U">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86UjNoRWU2MXgwLWs"> [SUNw abstract]</a> 
 </p>
 
 <div id="bib_lealcvpr2014" class="bibtex noshow">
@@ -480,7 +468,6 @@ L. Leal-Taix&eacute;, M. Fenzi, A. Kuznetsova, B. Rosenhahn and S. Savarese<br /
 </tr>
 
 </table>
-
 <!-- Item: lealthesis2014 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -500,7 +487,7 @@ L. Leal-Taix&eacute;<br />
 
 <a href="javascript:toggleBibtex('lealthesis2014')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86dVhlclpXcjVzYU0">[PDF]</a><a href="http://arxiv.org/abs/1411.7935"> [ArXiV]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86dVhlclpXcjVzYU0">[PDF]</a> <a href="http://arxiv.org/abs/1411.7935"> [ArXiV]</a> 
 </p>
 
 <div id="bib_lealthesis2014" class="bibtex noshow">
@@ -517,7 +504,6 @@ L. Leal-Taix&eacute;<br />
 </tr>
 
 </table>
-
 <!-- Item: fenzicvpr2013 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -554,7 +540,6 @@ M. Fenzi, L. Leal-Taix&eacute;, B. Rosenhahn and J. Ostermann<br />
 </tr>
 
 </table>
-
 <!-- Item: kuznetsovaiccvw2013 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -591,7 +576,6 @@ A. Kuznetsova, L. Leal-Taix&eacute; and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: maleschlijskibio2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -628,7 +612,6 @@ S. Maleschlijski, L. Leal-Taix&eacute;, S. Weisse, A. Di Fino, N. Aldred, A. S. 
 </tr>
 
 </table>
-
 <!-- Item: fenzidagm2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -665,7 +648,6 @@ M. Fenzi, R. Dragon, L. Leal-Taix&eacute;, B. Rosenhahn and J. Ostermann<br />
 </tr>
 
 </table>
-
 <!-- Item: ponsdagm2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -702,7 +684,6 @@ G. Pons-Moll, L. Leal-Taix&eacute;, T. Truong and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: lealcvpr2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -722,7 +703,7 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 
 <a href="javascript:toggleBibtex('lealcvpr2012')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86UDNfUGVoelNzM0k">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86T2psZVV3X2k4bFk"> [Poster]</a><a href="{{ site.url }}/code"> [Code]</a><a href="http://youtu.be/639bh3jVOVU"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86UDNfUGVoelNzM0k">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86T2psZVV3X2k4bFk"> [Poster]</a> <a href="{{ site.url }}/code"> [Code]</a> <a href="http://youtu.be/639bh3jVOVU"> [Video]</a> 
 </p>
 
 <div id="bib_lealcvpr2012" class="bibtex noshow">
@@ -739,7 +720,6 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: lealbook2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -776,7 +756,6 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
-
 <!-- Item: lealdagstuhl2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -796,7 +775,7 @@ Springer Berlin Heidelberg,
 
 <a href="javascript:toggleBibtex('lealdagstuhl2012')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86ejhsMzZ2ZDhMSWs">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86ejhsMzZ2ZDhMSWs">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> 
 </p>
 
 <div id="bib_lealdagstuhl2012" class="bibtex noshow">
@@ -815,7 +794,6 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
-
 <!-- Item: maleschlijskibio2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -852,7 +830,6 @@ S. Maleschlijski, G. H. Sendra, A. Di Fino, L. Leal-Taix&eacute;, I. Thome, A. T
 </tr>
 
 </table>
-
 <!-- Item: ponsdagstuhl2012 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -890,7 +867,6 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
-
 <!-- Item: lealiccv2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -910,7 +886,7 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 
 <a href="javascript:toggleBibtex('lealiccv2011')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86RXROdThCNEVRRDg">[PDF]</a><a href="{{ site.url }}/code"> [Code]</a><a href="http://youtu.be/1DP3soJVOck"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86RXROdThCNEVRRDg">[PDF]</a> <a href="{{ site.url }}/code"> [Code]</a> <a href="http://youtu.be/1DP3soJVOck"> [Video]</a> 
 </p>
 
 <div id="bib_lealiccv2011" class="bibtex noshow">
@@ -927,7 +903,6 @@ L. Leal-Taix&eacute;, G. Pons-Moll and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: ponsiccv2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -947,7 +922,7 @@ G. Pons-Moll, A. Baak, J. Gall, L. Leal-Taix&eacute;, M. Mueller, H.-P.Seidel an
 
 <a href="javascript:toggleBibtex('ponsiccv2011')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86bkVacVVyN0hsNVE">[PDF]</a><a href="https://drive.google.com/open?id=0B1e2GU8Qot86bHJHclVyUTRtRzg"> [Suppl.]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86bkVacVVyN0hsNVE">[PDF]</a> <a href="https://drive.google.com/open?id=0B1e2GU8Qot86bHJHclVyUTRtRzg"> [Suppl.]</a> 
 </p>
 
 <div id="bib_ponsiccv2011" class="bibtex noshow">
@@ -964,7 +939,6 @@ G. Pons-Moll, A. Baak, J. Gall, L. Leal-Taix&eacute;, M. Mueller, H.-P.Seidel an
 </tr>
 
 </table>
-
 <!-- Item: lealdagstuhl2011 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1002,7 +976,6 @@ Springer Berlin Heidelberg,
 </tr>
 
 </table>
-
 <!-- Item: lealdagm2010 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1022,7 +995,7 @@ L. Leal-Taix&eacute;, M. Heydt, S. Weisse, A. Rosenhahn and B. Rosenhahn<br />
 
 <a href="javascript:toggleBibtex('lealdagm2010')">[BibTeX]</a>
 
-<a href="https://drive.google.com/open?id=0B1e2GU8Qot86NkpNakhwMHZhbVU">[PDF]</a><a href="http://youtu.be/y_70plXPww8?attredirects=0"> [Video]</a> 
+<a href="https://drive.google.com/open?id=0B1e2GU8Qot86NkpNakhwMHZhbVU">[PDF]</a> <a href="http://youtu.be/y_70plXPww8?attredirects=0"> [Video]</a> 
 </p>
 
 <div id="bib_lealdagm2010" class="bibtex noshow">
@@ -1039,7 +1012,6 @@ L. Leal-Taix&eacute;, M. Heydt, S. Weisse, A. Rosenhahn and B. Rosenhahn<br />
 </tr>
 
 </table>
-
 <!-- Item: lealwmvc2009 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1076,7 +1048,42 @@ L. Leal-Taix&eacute;, M. Heydt, A. Rosenhahn and B. Rosenhahn<br />
 </tr>
 
 </table>
+<!-- Item: lealmsc2009 -->
+<!-- <li >-->
+<table style="width:100%">
+<tr>
+<td style="width:110px;vertical-align: top;">
+<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/Leal-Taixe-thesis.png" width="100px" height="100px">
+</td>
+<td>
+<p>
+L. Leal-Taix&eacute;<br />
+<strong>Automatic segmentation of multi-stain histology images of arteries</strong><br />
 
+
+<i>Technical University of Catalonia (UPC),</i> 
+2009.
+<br />
+
+<a href="javascript:toggleBibtex('lealmsc2009')">[BibTeX]</a>
+
+
+</p>
+
+<div id="bib_lealmsc2009" class="bibtex noshow">
+<pre>
+@mastersthesis{lealmsc2009,
+  author = {L. Leal-Taix&eacute;},
+  title = {Automatic segmentation of multi-stain histology images of arteries},
+  school = {Technical University of Catalonia (UPC)},
+  year = {2009}
+}
+</pre>
+</div>
+</td>
+</tr>
+
+</table>
 <!-- Item: lealwcmpbe2009 -->
 <!-- <li >-->
 <table style="width:100%">
@@ -1113,41 +1120,3 @@ L. Leal-Taix&eacute;, A. U. Coskun, B. Rosenhahn and D. Brooks<br />
 </tr>
 
 </table>
-
-<!-- Item: lealmsc2009 -->
-<!-- <li >-->
-<table style="width:100%">
-<tr>
-<td style="width:110px;vertical-align: top;">
-<img style="float: left;margin-right: 10px" border="1px solid #bbb" src="{{ site.url }}/images/papers/Leal-Taixe-thesis.png" width="100px" height="100px">
-</td>
-<td>
-<p>
-L. Leal-Taix&eacute;<br />
-<strong>Automatic segmentation of multi-stain histology images of arteries</strong><br />
-
-
-<i>Technical University of Catalonia (UPC),</i> 
-2009.
-<br />
-
-<a href="javascript:toggleBibtex('lealmsc2009')">[BibTeX]</a>
-
- 
-</p>
-
-<div id="bib_lealmsc2009" class="bibtex noshow">
-<pre>
-@mastersthesis{lealmsc2009,
-  author = {L. Leal-Taix&eacute;},
-  title = {Automatic segmentation of multi-stain histology images of arteries},
-  school = {Technical University of Catalonia (UPC)},
-  year = {2009}
-}
-</pre>
-</div>
-</td>
-</tr>
-
-</table>
-
